exports[`DisplayTile should render 3 tiles which render a title buttons 1`] = `
<div>
  <ul
    className={undefined}>
    <li>
      <div
        className=""
        id={undefined}
        onClick={undefined}
        onDoubleClick={[Function]}>
        <div
          style={
            Object {
              "display": "inline",
            }
          }>
          <i
            aria-hidden="true"
            className="fa fa-file-excel-o tc-list-icon"
            title={null} />
          <button
            className="btn btn-link"
            disabled={false}
            id={undefined}
            onClick={[Function]}
            role="link"
            type="button">
            Hello world
          </button>
        </div>
        <dl
          className={undefined}>
          <dt
            className={undefined}>
            Id
          </dt>
          <dd
            className={undefined}
            title={1}>
            1
          </dd>
          <dt
            className={undefined}>
            Author
          </dt>
          <dd
            className={undefined}
            title="Jean-Pierre DUPONT">
            Jean-Pierre DUPONT
          </dd>
          <dt
            className={undefined}>
            Created
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
          <dt
            className={undefined}>
            Modified
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
        </dl>
      </div>
    </li>
    <li>
      <div
        className=""
        id={undefined}
        onClick={undefined}
        onDoubleClick={[Function]}>
        <div
          style={
            Object {
              "display": "inline",
            }
          }>
          <i
            aria-hidden="true"
            className="fa fa-file-pdf-o tc-list-icon"
            title={null} />
          <button
            className="btn btn-link"
            disabled={false}
            id={undefined}
            onClick={[Function]}
            role="link"
            type="button">
            Foo
          </button>
        </div>
        <dl
          className={undefined}>
          <dt
            className={undefined}>
            Id
          </dt>
          <dd
            className={undefined}
            title={2}>
            2
          </dd>
          <dt
            className={undefined}>
            Author
          </dt>
          <dd
            className={undefined}
            title="Jean-Pierre DUPONT">
            Jean-Pierre DUPONT
          </dd>
          <dt
            className={undefined}>
            Created
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
          <dt
            className={undefined}>
            Modified
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
        </dl>
      </div>
    </li>
    <li>
      <div
        className=""
        id={undefined}
        onClick={undefined}
        onDoubleClick={[Function]}>
        <div
          style={
            Object {
              "display": "inline",
            }
          }>
          <button
            className="btn btn-link"
            disabled={false}
            id={undefined}
            onClick={[Function]}
            role="link"
            type="button">
            Bar
          </button>
        </div>
        <dl
          className={undefined}>
          <dt
            className={undefined}>
            Id
          </dt>
          <dd
            className={undefined}
            title={2}>
            2
          </dd>
          <dt
            className={undefined}>
            Author
          </dt>
          <dd
            className={undefined}
            title="Jean-Pierre DUPONT">
            Jean-Pierre DUPONT
          </dd>
          <dt
            className={undefined}>
            Created
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
          <dt
            className={undefined}>
            Modified
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
        </dl>
      </div>
    </li>
  </ul>
</div>
`;

exports[`DisplayTile should render 3 tiles with id as title by setting 1`] = `
<div>
  <ul
    className={undefined}>
    <li>
      <div
        className=""
        id={undefined}
        onClick={undefined}
        onDoubleClick={undefined}>
        <div
          style={
            Object {
              "display": "inline",
            }
          }>
          <i
            aria-hidden="true"
            className="fa fa-file-excel-o tc-list-icon"
            title={null} />
          <span
            className=""
            id={undefined}>
            1
          </span>
        </div>
        <dl
          className={undefined}>
          <dt
            className={undefined}>
            Name
          </dt>
          <dd
            className={undefined}
            title="Hello world">
            Hello world
          </dd>
          <dt
            className={undefined}>
            Author
          </dt>
          <dd
            className={undefined}
            title="Jean-Pierre DUPONT">
            Jean-Pierre DUPONT
          </dd>
          <dt
            className={undefined}>
            Created
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
          <dt
            className={undefined}>
            Modified
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
        </dl>
      </div>
    </li>
    <li>
      <div
        className=""
        id={undefined}
        onClick={undefined}
        onDoubleClick={undefined}>
        <div
          style={
            Object {
              "display": "inline",
            }
          }>
          <i
            aria-hidden="true"
            className="fa fa-file-pdf-o tc-list-icon"
            title={null} />
          <span
            className=""
            id={undefined}>
            2
          </span>
        </div>
        <dl
          className={undefined}>
          <dt
            className={undefined}>
            Name
          </dt>
          <dd
            className={undefined}
            title="Foo">
            Foo
          </dd>
          <dt
            className={undefined}>
            Author
          </dt>
          <dd
            className={undefined}
            title="Jean-Pierre DUPONT">
            Jean-Pierre DUPONT
          </dd>
          <dt
            className={undefined}>
            Created
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
          <dt
            className={undefined}>
            Modified
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
        </dl>
      </div>
    </li>
    <li>
      <div
        className=""
        id={undefined}
        onClick={undefined}
        onDoubleClick={undefined}>
        <div
          style={
            Object {
              "display": "inline",
            }
          }>
          <span
            className=""
            id={undefined}>
            2
          </span>
        </div>
        <dl
          className={undefined}>
          <dt
            className={undefined}>
            Name
          </dt>
          <dd
            className={undefined}
            title="Bar">
            Bar
          </dd>
          <dt
            className={undefined}>
            Author
          </dt>
          <dd
            className={undefined}
            title="Jean-Pierre DUPONT">
            Jean-Pierre DUPONT
          </dd>
          <dt
            className={undefined}>
            Created
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
          <dt
            className={undefined}>
            Modified
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
        </dl>
      </div>
    </li>
  </ul>
</div>
`;

exports[`DisplayTile should render 3 tiles with name as title by default 1`] = `
<div>
  <ul
    className={undefined}>
    <li>
      <div
        className=""
        id={undefined}
        onClick={undefined}
        onDoubleClick={undefined}>
        <div
          style={
            Object {
              "display": "inline",
            }
          }>
          <span
            className=""
            id={undefined}>
            Hello world
          </span>
        </div>
        <dl
          className={undefined}>
          <dt
            className={undefined}>
            Id
          </dt>
          <dd
            className={undefined}
            title={1}>
            1
          </dd>
          <dt
            className={undefined}>
            Author
          </dt>
          <dd
            className={undefined}
            title="Jean-Pierre DUPONT">
            Jean-Pierre DUPONT
          </dd>
          <dt
            className={undefined}>
            Created
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
          <dt
            className={undefined}>
            Modified
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
        </dl>
      </div>
    </li>
    <li>
      <div
        className=""
        id={undefined}
        onClick={undefined}
        onDoubleClick={undefined}>
        <div
          style={
            Object {
              "display": "inline",
            }
          }>
          <span
            className=""
            id={undefined}>
            Foo
          </span>
        </div>
        <dl
          className={undefined}>
          <dt
            className={undefined}>
            Id
          </dt>
          <dd
            className={undefined}
            title={2}>
            2
          </dd>
          <dt
            className={undefined}>
            Author
          </dt>
          <dd
            className={undefined}
            title="Jean-Pierre DUPONT">
            Jean-Pierre DUPONT
          </dd>
          <dt
            className={undefined}>
            Created
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
          <dt
            className={undefined}>
            Modified
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
        </dl>
      </div>
    </li>
    <li>
      <div
        className=""
        id={undefined}
        onClick={undefined}
        onDoubleClick={undefined}>
        <div
          style={
            Object {
              "display": "inline",
            }
          }>
          <span
            className=""
            id={undefined}>
            Bar
          </span>
        </div>
        <dl
          className={undefined}>
          <dt
            className={undefined}>
            Id
          </dt>
          <dd
            className={undefined}
            title={2}>
            2
          </dd>
          <dt
            className={undefined}>
            Author
          </dt>
          <dd
            className={undefined}
            title="Jean-Pierre DUPONT">
            Jean-Pierre DUPONT
          </dd>
          <dt
            className={undefined}>
            Created
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
          <dt
            className={undefined}>
            Modified
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
        </dl>
      </div>
    </li>
  </ul>
</div>
`;

exports[`DisplayTile should render with id if provided 1`] = `
<div>
  <ul
    className={undefined}>
    <li>
      <div
        className=""
        id="tile-list-0"
        onClick={undefined}
        onDoubleClick={undefined}>
        <div
          style={
            Object {
              "display": "inline",
            }
          }>
          <span
            className=""
            id="tile-list-0-title">
            Hello world
          </span>
        </div>
        <dl
          className={undefined}>
          <dt
            className={undefined}>
            Id
          </dt>
          <dd
            className={undefined}
            title={1}>
            1
          </dd>
          <dt
            className={undefined}>
            Author
          </dt>
          <dd
            className={undefined}
            title="Jean-Pierre DUPONT">
            Jean-Pierre DUPONT
          </dd>
          <dt
            className={undefined}>
            Created
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
          <dt
            className={undefined}>
            Modified
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
        </dl>
      </div>
    </li>
    <li>
      <div
        className=""
        id="tile-list-1"
        onClick={undefined}
        onDoubleClick={undefined}>
        <div
          style={
            Object {
              "display": "inline",
            }
          }>
          <span
            className=""
            id="tile-list-1-title">
            Foo
          </span>
        </div>
        <dl
          className={undefined}>
          <dt
            className={undefined}>
            Id
          </dt>
          <dd
            className={undefined}
            title={2}>
            2
          </dd>
          <dt
            className={undefined}>
            Author
          </dt>
          <dd
            className={undefined}
            title="Jean-Pierre DUPONT">
            Jean-Pierre DUPONT
          </dd>
          <dt
            className={undefined}>
            Created
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
          <dt
            className={undefined}>
            Modified
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
        </dl>
      </div>
    </li>
    <li>
      <div
        className=""
        id="tile-list-2"
        onClick={undefined}
        onDoubleClick={undefined}>
        <div
          style={
            Object {
              "display": "inline",
            }
          }>
          <span
            className=""
            id="tile-list-2-title">
            Bar
          </span>
        </div>
        <dl
          className={undefined}>
          <dt
            className={undefined}>
            Id
          </dt>
          <dd
            className={undefined}
            title={2}>
            2
          </dd>
          <dt
            className={undefined}>
            Author
          </dt>
          <dd
            className={undefined}
            title="Jean-Pierre DUPONT">
            Jean-Pierre DUPONT
          </dd>
          <dt
            className={undefined}>
            Created
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
          <dt
            className={undefined}>
            Modified
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
        </dl>
      </div>
    </li>
  </ul>
</div>
`;

exports[`DisplayTile should render with item custom className if provided 1`] = `
<div>
  <ul
    className={undefined}>
    <li>
      <div
        className="item-0-class"
        id="tile-list-0"
        onClick={undefined}
        onDoubleClick={undefined}>
        <div
          style={
            Object {
              "display": "inline",
            }
          }>
          <span
            className=""
            id="tile-list-0-title">
            Hello world
          </span>
        </div>
        <dl
          className={undefined}>
          <dt
            className={undefined}>
            Id
          </dt>
          <dd
            className={undefined}
            title={1}>
            1
          </dd>
          <dt
            className={undefined}>
            Author
          </dt>
          <dd
            className={undefined}
            title="Jean-Pierre DUPONT">
            Jean-Pierre DUPONT
          </dd>
          <dt
            className={undefined}>
            Created
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
          <dt
            className={undefined}>
            Modified
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
        </dl>
      </div>
    </li>
    <li>
      <div
        className="item-1-class"
        id="tile-list-1"
        onClick={undefined}
        onDoubleClick={undefined}>
        <div
          style={
            Object {
              "display": "inline",
            }
          }>
          <span
            className=""
            id="tile-list-1-title">
            Foo
          </span>
        </div>
        <dl
          className={undefined}>
          <dt
            className={undefined}>
            Id
          </dt>
          <dd
            className={undefined}
            title={2}>
            2
          </dd>
          <dt
            className={undefined}>
            Author
          </dt>
          <dd
            className={undefined}
            title="Jean-Pierre DUPONT">
            Jean-Pierre DUPONT
          </dd>
          <dt
            className={undefined}>
            Created
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
          <dt
            className={undefined}>
            Modified
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
        </dl>
      </div>
    </li>
    <li>
      <div
        className=""
        id="tile-list-2"
        onClick={undefined}
        onDoubleClick={undefined}>
        <div
          style={
            Object {
              "display": "inline",
            }
          }>
          <span
            className=""
            id="tile-list-2-title">
            Bar
          </span>
        </div>
        <dl
          className={undefined}>
          <dt
            className={undefined}>
            Id
          </dt>
          <dd
            className={undefined}
            title={2}>
            2
          </dd>
          <dt
            className={undefined}>
            Author
          </dt>
          <dd
            className={undefined}
            title="Jean-Pierre DUPONT">
            Jean-Pierre DUPONT
          </dd>
          <dt
            className={undefined}>
            Created
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
          <dt
            className={undefined}>
            Modified
          </dt>
          <dd
            className={undefined}
            title="2016-09-22">
            2016-09-22
          </dd>
        </dl>
      </div>
    </li>
  </ul>
</div>
`;
